# cinux-riscv

./: CMakeLists.txt  README.md
kernel/: linker.ld
kernel/include/: stdarg.h  stdint.h  uart.h
kernel/src/: entry.s  main.c  uart.s
